# jaffadata

./: pyproject.toml
jaffadata/: __init__.py
jaffadata/core/: dataset.py  labels.py  mask.py
jaffadata/datasets/: __init__.py  arca23k.py  audioset.py  esc.py  fsd50k.py  fsdkaggle2018.py  fsdkaggle2019.py  fsdnoisy18k.py  tau_nigens.py  urbansound.py
