[tool.poetry]
name = "jaffadata"
version = "0.1.0"
description = "A library for working with audio datasets in ML"
authors = ["Turab Iqbal <t.iqbal@surrey.ac.uk>"]
repository = "https://github.com/tqbl/jaffadata"
license = "ISC"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
